# phi-4-instruct-api

./: LICENSE  README.md  pyproject.toml
docs/: reference-code.md
phi_4_instruct_api/: __init__.py  api.py  main.py  model.py  schemas.py
